17431 builds with Java 17 should be possible Portions contributed by: Patrick Mooney <pmooney@pfmooney.com> Reviewed by: Andy Fiddaman <illumos@fiddaman.net> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Reviewed by: Michael van der Westhuizen <r1mikey@gmail.com> Approved by: Dan McDonald <danmcd@mnx.io>