@@ -133,7 +133,7 @@ public final class LogDistribution extends Distribution
 	for (Distribution.Bucket bucket : buckets) {
 	    total += ((double)bucket.getFrequency() * (double)bucket.getMin());
 	}
-	return (new Double(total));
+	return (Double.valueOf(total));
     }
 
     private long
